--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,10 @@ python-jose==3.3.0
 requests==2.32.3
 pytest==7.4.0
 httpx==0.27.0
+
+# Phase 3 ML Dependencies
+torch==2.1.0
+torchvision==0.16.0
+opencv-python==4.8.1.78
+pillow==10.1.0
+numpy==1.24.3
