--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn==0.27.1
 python-dotenv==1.0.1
 supabase==2.10.0
 python-jose==3.3.0
+cryptography==41.0.7
 requests==2.32.3
 pytest==7.4.0
 httpx==0.27.0
