chore: minor formatting updates to vercel.json and sync-hf-space.yml

--- a/.github/workflows/sync-hf-space.yml
+++ b/.github/workflows/sync-hf-space.yml
@@ -1,5 +1,4 @@
 name: Sync backend → HF Space
-
 on:
   push:
     branches:
@@ -7,6 +6,7 @@ on:
       - master
     paths:
       - "backend/**"
+  workflow_dispatch:
 
 jobs:
   sync:
