--- a/.github/workflows/sync-hf-space.yml
+++ b/.github/workflows/sync-hf-space.yml
@@ -18,46 +18,53 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ── 2. Configure git identity ──────────────────────────────────────────
-      - name: Configure git
+      # ── 2. Configure git identity + HF credentials ────────────────────────
+      - name: Configure git & credentials
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name  "github-actions[bot]"
 
+          # Debug: confirm token is present and looks valid
+          echo "HF_TOKEN length   : ${#HF_TOKEN}"
+          echo "HF_TOKEN prefix   : ${HF_TOKEN:0:5}"   # should print 'hf_xx'
+
+          # Store credentials so git never prompts / embeds token in URLs
+          git config --global credential.helper store
+          echo "https://muneer320:${HF_TOKEN}@huggingface.co" > ~/.git-credentials
+          chmod 600 ~/.git-credentials
+          echo "Credentials stored."
+
       # ── 3. Clone the HF Space repo ─────────────────────────────────────────
-      #
-      # HF_TOKEN  → GitHub secret  (HF user access token, read+write on Space)
-      # HF_SPACE_ID → GitHub variable (format: username/space-name)
-      #
       - name: Clone HF Space
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_SPACE_ID: ${{ vars.HF_SPACE_ID }}
         run: |
-          git clone "https://muneer320:${HF_TOKEN}@huggingface.co/spaces/${HF_SPACE_ID}" hf-space
+          echo "HF_SPACE_ID: ${HF_SPACE_ID}"
+          # Use plain HTTPS URL — credentials come from ~/.git-credentials
+          git clone "https://huggingface.co/spaces/${HF_SPACE_ID}" hf-space
+          echo "Clone succeeded."
 
       # ── 4. Sync backend/ → root of the HF Space ───────────────────────────
-      #
-      # --delete removes files from the Space that were deleted locally.
-      # .git is excluded so we never clobber the Space's own git history.
-      #
       - name: Sync files
         run: |
           rsync -av --delete --exclude='.git' backend/ hf-space/
+          echo "Rsync complete."
 
       # ── 5. Commit & push (only if something actually changed) ─────────────
       - name: Push to HF Space
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_SPACE_ID: ${{ vars.HF_SPACE_ID }}
         run: |
           SHORT_SHA=$(git rev-parse --short HEAD)
           cd hf-space
           git add -A
-          # Exit 0 if nothing changed (git diff --cached --quiet exits 0 = no diff)
           if git diff --cached --quiet; then
             echo "No changes to sync – skipping push."
           else
             git commit -m "sync: GitHub ${SHORT_SHA}"
-            git push "https://muneer320:${HF_TOKEN}@huggingface.co/spaces/${HF_SPACE_ID}" main
+            # Credentials from store — no token in the URL
+            git push "https://huggingface.co/spaces/${HF_SPACE_ID}" main
+            echo "Push succeeded."
           fi
